header layout overflow fix; css vars cleanup

--- a/src/js/custom_elements/color_picker/color_picker.styl
+++ b/src/js/custom_elements/color_picker/color_picker.styl
@@ -1,5 +1,4 @@
 color-picker
-  margin 0 0 0 auto
   position relative
   z-index 1
 
