--- a/src/stylus/vars.styl
+++ b/src/stylus/vars.styl
@@ -1,12 +1,10 @@
 :root
-  --fineprint em(12)
+  --header-font-size rem(16)
   --header-height rem(48)
-  --site-header rem(16)
 
   @media breakpoint.medium
-    --fineprint em(14)
+    --header-font-size rem(20)
     --header-height rem(60)
-    --site-header rem(20)
 
   // Default light theme.
   --background-0 background-0
